# qmlformat-hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg  setup.py
hooks/: __init__.py  qmlformat.py
