# setup.cfg
[metadata]
name = qmlformat
description = A pre-commit hook for formatting QML files using the `qmlformat` tool provided by Qt libraries.
author = Tomas Krupa
license = MIT

[options]
packages = find:
python_requires = >=3.7
install_requires =
    PySide6-Essentials

[options.entry_points]
console_scripts =
    qmlformat-hook = hooks.qmlformat:main
